--- a/nginx.conf
+++ b/nginx.conf
@@ -5,6 +5,8 @@ server {
     ssl_certificate_key     /etc/ssl/key.pem;
     server_name be.dawnlit.com;
     location /api {
+        proxy_set_header   X-Forwarded-For $remote_addr;
+        proxy_set_header   Host $http_host;
         proxy_pass http://localhost:7061;
     }
 }
@@ -16,18 +18,9 @@ server {
     ssl_certificate_key     /etc/ssl/key.pem;
     server_name dawnlit.com www.dawnlit.com;
     location / {
+        proxy_set_header   X-Forwarded-For $remote_addr;
+        proxy_set_header   Host $http_host;
         proxy_pass http://localhost:4200;
-    }
-}
-
-server {
-    listen 443 ssl http2;
-    listen [::]:443 ssl http2;
-    ssl_certificate         /etc/ssl/cert.pem;
-    ssl_certificate_key     /etc/ssl/key.pem;
-    server_name db.dawnlit.com;
-    location / {
-        proxy_pass https://localhost:8080;
     }
 }
 
@@ -38,6 +31,8 @@ server {
     ssl_certificate_key     /etc/ssl/key.pem;
     server_name gitlab.dawnlit.com;
     location / {
+        proxy_set_header   X-Forwarded-For $remote_addr;
+        proxy_set_header   Host $http_host;
         proxy_pass https://localhost:8929;
     }
 }
