add error checking

--- a/configuration.json
+++ b/configuration.json
@@ -1,7 +1,9 @@
 {
-    "additional_apt_packages": [],
+    "additional_apt_packages": [
+        "gnome-tweaks"
+    ],
     "additional_snap_packages": [],
     "dawnlit_database_connection": "Host=localhost;Database=main;Username=postgres;Password=root",
-    "npassword": "",
+    "password": "",
     "username": ""
 }
