prevent system from suspending due to closed lid

--- a/configuration.json
+++ b/configuration.json
@@ -1,7 +1,5 @@
 {
-    "additional_apt_packages": [
-        "gnome-tweaks"
-    ],
+    "additional_apt_packages": [],
     "additional_snap_packages": [],
     "dawnlit_database_connection": "Host=localhost;Database=main;Username=postgres;Password=root",
     "password": "",
