--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,8 @@ services:
     image: postgres:latest
     restart: always
     environment:
-      POSTGRES_PASSWORD: user_password_here
       POSTGRES_USER: username_here
+      POSTGRES_PASSWORD: user_password_here
       POSTGRES_DB: main
     ports:
       - 5432:5432
@@ -24,12 +24,15 @@ services:
       GITLAB_OMNIBUS_CONFIG: |
         external_url 'https://gitlab.dawnlit.com:8929'
         gitlab_rails['gitlab_shell_ssh_port'] = 2224
+        nginx['ssl_certificate'] = "/etc/ssl/certs/gitlab/cert.pem"
+        nginx['ssl_certificate_key'] = "/etc/ssl/certs/gitlab/key.pem"
         # Add any other gitlab.rb configuration here, each on its own line
     ports:
       - '8929:8929'
       - '2224:22'
     volumes:
       - '$GITLAB_HOME/config:/etc/gitlab'
+      - '$GITLAB_HOME/ssl:/etc/ssl/certs/gitlab'
       - '$GITLAB_HOME/logs:/var/log/gitlab'
       - '$GITLAB_HOME/data:/var/opt/gitlab'
     shm_size: '256m'
