--- a/nginx.glob.conf
+++ b/nginx.glob.conf
@@ -14,25 +14,17 @@ server {
 server {
     listen 443 ssl http2;
     listen [::]:443 ssl http2;
-    ssl_certificate         /etc/ssl/cert.pem;
-    ssl_certificate_key     /etc/ssl/key.pem;
     server_name dawnlit.com www.dawnlit.com;
     location / {
-        proxy_set_header   X-Forwarded-For $remote_addr;
-        proxy_set_header   Host $http_host;
-        proxy_pass http://localhost:4200;
+        proxy_pass https://localhost:4200;
     }
 }
 
 server {
     listen 443 ssl http2;
     listen [::]:443 ssl http2;
-    ssl_certificate         /etc/ssl/cert.pem;
-    ssl_certificate_key     /etc/ssl/key.pem;
     server_name gitlab.dawnlit.com;
     location / {
-        proxy_set_header   X-Forwarded-For $remote_addr;
-        proxy_set_header   Host $http_host;
         proxy_pass https://localhost:8929;
     }
 }
