--- a/dawnlit_web/nginx.prod.conf
+++ b/dawnlit_web/nginx.prod.conf
@@ -3,13 +3,13 @@ server {
     listen [::]:443 ssl http2;
     ssl_certificate         /etc/ssl/cert.pem;
     ssl_certificate_key     /etc/ssl/key.pem;
-    server_name dawnlit.com www.dawnlit.com;
+    server_name example.com www.example.com;
     location /api/ {
-        proxy_pass https://be.dawnlit.com/api/;
+        proxy_pass https://be.example.com/api/;
         proxy_ssl_server_name on;
     }
     location /signalr/ {
-        proxy_pass https://be.dawnlit.com/signalr/;
+        proxy_pass https://be.example.com/signalr/;
         proxy_ssl_server_name on;
     }
     location / {
