--- a/nginx.glob.conf
+++ b/nginx.glob.conf
@@ -3,7 +3,7 @@ server {
     listen [::]:443 ssl http2;
     ssl_certificate         /etc/ssl/cert.pem;
     ssl_certificate_key     /etc/ssl/key.pem;
-    server_name be.dawnlit.com;
+    server_name be.example.com;
     location /api {
         proxy_set_header   X-Forwarded-For $remote_addr;
         proxy_set_header   Host $http_host;
@@ -14,7 +14,7 @@ server {
 server {
     listen 443 ssl http2;
     listen [::]:443 ssl http2;
-    server_name dawnlit.com www.dawnlit.com;
+    server_name example.com www.example.com;
     location / {
         proxy_pass https://localhost:4200;
     }
@@ -23,7 +23,7 @@ server {
 server {
     listen 443 ssl http2;
     listen [::]:443 ssl http2;
-    server_name gitlab.dawnlit.com;
+    server_name gitlab.example.com;
     location / {
         proxy_pass https://localhost:8929;
     }
