implement script for backing up gitlab container

--- a/configuration.json
+++ b/configuration.json
@@ -1,4 +1,5 @@
 {
+    "SharedFolderName": "MyShare",
     "additional_apt_packages": [],
     "additional_snap_packages": [],
     "domain": "example.com",
