adding scripts for code-server and restart services after reboot

--- a/nginx.glob.conf
+++ b/nginx.glob.conf
@@ -28,3 +28,16 @@ server {
         proxy_pass https://localhost:8929;
     }
 }
+
+server {
+    listen 443 ssl http2;
+    listen [::]:443 ssl http2;
+    server_name code.example.com;
+    location / {
+        proxy_pass http://localhost:8949;
+        proxy_set_header Host $http_host;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection upgrade;
+        proxy_set_header Accept-Encoding gzip;
+    }
+}
