add ollama service

--- a/services_templates/nginx.glob.conf
+++ b/services_templates/nginx.glob.conf
@@ -41,3 +41,12 @@ server {
         proxy_set_header Accept-Encoding gzip;
     }
 }
+
+server {
+    listen 443 ssl http2;
+    listen [::]:443 ssl http2;
+    server_name ollama.example.com;
+    location / {
+        proxy_pass http://localhost:11434;
+    }
+}
