--- a/services_templates/nginx.glob.conf
+++ b/services_templates/nginx.glob.conf
@@ -45,7 +45,7 @@ server {
 server {
     listen 443 ssl http2;
     listen [::]:443 ssl http2;
-    server_name ollama.example.com;
+    server_name gpt.example.com;
     location / {
         proxy_pass http://localhost:11434;
     }
